--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@ html, body {
 
    </style>
    </div>
-  
+  ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+  <ul>
+  <li><a href="page 1">page 1</a></li>
+  <li><a href="page 2>Page 2</a></li>
+</ul> 
 
    </style>
 <h1 style="text-align:center;">Looking forward</h1>
