--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link href="style.css" rel="stylesheet" type="text/css">
   <style>
      body {background-color:blue}
+header h1 {
+    margin: 0;
 }
 
 html, body {
@@ -12,18 +14,12 @@ html, body {
 }
 
    </style>
+   <div class="sidebar">
+   <div class="arrow"><h1><span style="color:whitesmoke">i</span>></h1></div>
+   <h1><a href="page 1.html"> Looking forward this summer</a></h1>
+   <h1><a href="page 2.html"> Looking forward in the next school year</a></h1>
    </div>
-  ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-  <ul>
-  <li><a href="page 1">page 1</a></li>
-  <li><a href="page 2>Page 2</a></li>
-</ul> 
+  
 
    </style>
-<h1 style="text-align:center;">Looking forward</h1>
-<h2 style="text-align:center;"> Looking forward to the summer (If were even gonna beable to do anything)</h2>
-<p style="text-align:center;">There are many things that I am looking forward to about summer if and when this whole pandemic is over.</p>
+<h1 style="text-align:center;">Meat Handgun</h1>
