--- a/index.html
+++ b/index.html
@@ -22,4 +22,4 @@ html, body {
   
 
    </style>
-<h1 style="text-align:center;">Meat Handgun</h1>
+<h1 style="text-align:center;">Looking forward</h1>
