--- a/page 2.html
+++ b/page 2.html
@@ -1,1 +1,15 @@
-
+ <head>
+  <link href="style.css" rel="stylesheet" type="text/css">
+</head>
+  <style>
+     body {background-color:white}
+  </style>
+<body>
+  <div class="header">
+    <a href="index.html"><div class="back">Back</div></a></div><br>
+  <div class="textpage1"> 
+   <h1 style="text-align:center;">Looking forward to the next school year</h1>
+    <p style="text-align:center;">It will be very intresting to see what will happen and if the next school year will happen. Looking bad I would never really think that I would miss school but I am actully missing it a lot. Next year I am going to be a junior. Junior year is a pretty important year becasue you take the SAT, and it is the year where you spend time looking at colleges and visting them. Also, the baseball season was cut early this year so that was very disapointing.</p>
+   <img src="text-align:center;"> "https://images.squarespace-cdn.com/content/v1/53d2a7e3e4b0b557d6a80e66/1543988963531-C3HHBKRVXCF5V3OID0H7/ke17ZwdGBToddI8pDm48kEMKL0OLXTS4lYMNB-v6AWYUqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYxCRW4BPu10St3TBAUQYVKcIc8VGsFfTP8KtKin0skOdertujunGnj_8glCIDoXqeVf5xJJu-ZmgMXgzRqe9RnF/d-tech-drone.jpg?format=2500w" alt="" class="logo" width="400px;">
+  </div>
+</body> 
