--- a/page 1.html
+++ b/page 1.html
@@ -9,6 +9,7 @@
     <a href="index.html"><div class="back">Back</div></a></div><br>
   <div class="textpage1"> 
    <h1 style="text-align:center;"> Looking forward to the summer</h1>
-   <p style="text-align:center;"> I am looking forward to having a good summer. One thing that me and my family are going to do in the summer is we are going to tahoe for a couple of days. I have never been to tahoe in the summer before so that is going to be very fun. I am dreading it as well though becasue I have heard from my freinds that I have talked to that tahoe gets very crowded in the summer and lots of people go.<br><br> Another thing that I am exited for in the week of July 4th. Every year we go to this place called capitola that is about 30 minutes from santa cruz, and we stay there for the week of July 4th. I am always very exited for this trip ever year.
+   <p style="text-align:center;"> I am looking forward to having a good summer. One thing that me and my family are going to do in the summer is we are going to tahoe for a couple of days. I have never been to tahoe in the summer before so that is going to be very fun. I am dreading it as well though becasue I have heard from my freinds that I have talked to that tahoe gets very crowded in the summer and lots of people go.<br><br> Another thing that I am exited for in the week of July 4th. Every year we go to this place called capitola that is about 30 minutes from santa cruz, and we stay there for the week of July 4th. I am always very exited for this trip ever year.</p>
+   <img src="text-align:center;"> "https://www.yourtahoeplace.com/uploads/secondary-page-slider-images/beach-promo-669x472.jpg" alt="" class="logo" width="400px;">
   </div>
 </body> 
